--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,8 @@
 # Navigation
-* [Home](/)
-* [Consulting](/consulting)
-* [Projects](/projects)
-    * [Hotel Security](/projects/hotel-security)
-* [Blog](/blog)
-* [Press](/press)
-* [About](/about) 
+* [Home]({{ site.baseurl }}/)
+* [Consulting]({{ site.baseurl }}/consulting)
+* [Projects]({{ site.baseurl }}/projects)
+    * [Hotel Security]({{ site.baseurl }}/projects/hotel-security)
+* [Blog]({{ site.baseurl }}/blog)
+* [Press]({{ site.baseurl }}/press)
+* [About]({{ site.baseurl }}/about) 
