fixed local vs github 2

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,6 +69,7 @@
 
 						<div id="under-footer-copyright">
 							&copy; 2013, <a href="http://www.jesusmolina.com">Jesus Molina </a> Template Designed by <a href="http://clabs.co">creativeLabs</a>
+							<span style="float:right;color:#888;">{{ site.version }}</span>
 						</div>
 
 					</div>
