--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,9 @@
-{% include header.html %}
-<div class="container">
+<!DOCTYPE html>
+<html lang="en">
+{% include head.html %}
+<body>
+    {% include header.html %}
+    <div class="container">
 
 		<!--start: Wrapper-->
 		<div id="wrapper">
@@ -26,3 +30,5 @@
 </div>
 </div>
 {% include footer.html %}
+</body>
+</html>
