--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,7 +69,6 @@
 
 						<div id="under-footer-copyright">
 							&copy; 2013, <a href="http://www.jesusmolina.com">Jesus Molina </a> Template Designed by <a href="http://clabs.co">creativeLabs</a>
-							<span style="float:right;color:#888;">{{ site.version }}</span>
 						</div>
 
 					</div>
@@ -96,25 +95,25 @@
 
 		<!-- start: Java Script -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="{{ site.baseurl }}/js/jquery-1.8.2.js"></script>
-		<script src="{{ site.baseurl }}/js/isotope.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.imagesloaded.js"></script>
-		<script src="{{ site.baseurl }}/js/bootstrap.js"></script>
-		<script src="{{ site.baseurl }}/js/flexslider.js"></script>
-		<script src="{{ site.baseurl }}/js/carousel.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.cslider.js"></script>
-		<script src="{{ site.baseurl }}/js/slider.js"></script>
-		<script src="{{ site.baseurl }}/js/fancybox.js"></script>
-		<script src="{{ site.baseurl }}/js/twitter.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.placeholder.min.js"></script>
+		<script src="/js/jquery-1.8.2.js"></script>
+		<script src="/js/isotope.js"></script>
+		<script src="/js/jquery.imagesloaded.js"></script>
+		<script src="/js/bootstrap.js"></script>
+		<script src="/js/flexslider.js"></script>
+		<script src="/js/carousel.js"></script>
+		<script src="/js/jquery.cslider.js"></script>
+		<script src="/js/slider.js"></script>
+		<script src="/js/fancybox.js"></script>
+		<script src="/js/twitter.js"></script>
+		<script src="/js/jquery.placeholder.min.js"></script>
 
-		<script src="{{ site.baseurl }}/js/excanvas.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.flot.min.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.flot.pie.min.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.flot.stack.js"></script>
-		<script src="{{ site.baseurl }}/js/jquery.flot.resize.min.js"></script>
+		<script src="/js/excanvas.js"></script>
+		<script src="/js/jquery.flot.min.js"></script>
+		<script src="/js/jquery.flot.pie.min.js"></script>
+		<script src="/js/jquery.flot.stack.js"></script>
+		<script src="/js/jquery.flot.resize.min.js"></script>
 
-		<script defer="defer" src="{{ site.baseurl }}/js/custom.js"></script>
+		<script defer="defer" src="js/custom.js"></script>
 
 <script type="text/javascript">
 
